# voice-dataset-creation

./: .gitignore  CARE_PRINCIPLES.md  CHANGELOG.md  README.md  pyproject.toml
colabs/: voice_dataset_SNR.ipynb
docs/: adapted_datasheet_for_indigenous_datasets.md  community_agreement_template.md  metadata_schema.md  mms_indigenous_languages.tsv  what_not_to_digitize.md  what_not_to_train_on.md
docs/design/: keria_acdc_integration.md
metadata/: metadata_template.csv
notebooks/: 01_record_and_segment.ipynb  02_snr_quality_analysis.ipynb  02a_transcribe_whisper.ipynb  02b_transcribe_mms.ipynb  02c_transcribe_manual.ipynb  03_snr_quality_analysis.ipynb  03a_transcribe_whisper.ipynb  03b_transcribe_mms.ipynb  03c_transcribe_manual.ipynb  04_augmentation.ipynb  05_export_ljspeech.ipynb
scripts/: batch_transcribe.py  batch_transcribe_whisper.py  export_metadata.py  markersfile_to_metadata.py  mp3_to_text.py  resamplewav.sh  segment_on_silence.py  text_to_wav.py  wav_to_text.py  wavdurations2csv.sh
teaching/: 06_student_protocol_exercise.ipynb  consent_tier_filtering_demo.ipynb
test_data/: Label Track.txt  Markers.csv  transcripts.csv  transcripts_mms.csv  tts_metadata.csv
test_data/wavs_export_audacity/: Label Track.txt
tests/: test_export_metadata.py
